# cdefer

./: .clang-format  .clangd  README.md  flake.nix  meson.build
include/: cdefer.h
tests/: test_cdefer.c
